BUG#5964 - 4.1 MERGE tables regression from 4.0 Changed the creation of the .MRG file so that only the table  name is written when the MyISAM table is in the same database as the MERGE table, a relative path is used in other cases in mysqld, and possibly an absolute path is used in an embedded server. No test case is added as the external behaviour is unchanged. Only the file names within the .MRG file are changed.